ui, dev: added light/dark mode toggle in map, fixed infinite requests

--- a/src/Map.css
+++ b/src/Map.css
@@ -22,4 +22,15 @@
 }
 .leaflet-tooltip-top{
   padding: 5px 5px;
+  /* font-size: large; */
+}
+.pslabel-light{
+    color: rgb(12, 47, 77);
+    -webkit-text-stroke: 0.15px rgb(170, 170, 170);
+    text-shadow: 2px 2px rgb(223, 223, 223);
+}
+.pslabel-dark{
+    color: rgb(232, 255, 24);
+    -webkit-text-stroke: 0.25px rgb(49, 49, 49);
+    text-shadow: 2px 2px rgb(0, 0, 0);
 }
